Fixed browser compatibility

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,14 +56,9 @@ nav .container .nav-logo img {
 }
 
 nav .container #hamburger {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 5px;
+  display: -ms-grid;
+  display: grid;
+  grid-gap: .3rem;
   width: 2.5rem;
   cursor: pointer;
   z-index: 10;
@@ -86,8 +81,8 @@ nav .container #hamburger span {
 
 nav .container #hamburger span:nth-child(2) {
   width: 50%;
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+  -ms-grid-column-align: end;
+      justify-self: end;
 }
 
 nav .container #hamburger.open span {
@@ -299,17 +294,19 @@ nav .container .nav-menu-mobile.show {
 }
 
 .social {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 1rem;
+  display: -ms-grid;
+  display: grid;
+  grid-gap: .5rem;
   position: fixed;
-  top: 45%;
+  top: 50%;
   right: 10px;
+}
+
+@media (min-width: 990px) {
+  .social {
+    top: 45%;
+    grid-gap: 1rem;
+  }
 }
 
 .social a {
@@ -378,7 +375,6 @@ nav .container .nav-menu-mobile.show {
       -ms-flex-direction: column;
           flex-direction: column;
   text-align: center;
-  gap: 3rem;
 }
 
 @media (min-width: 990px) {
@@ -437,9 +433,9 @@ nav .container .nav-menu-mobile.show {
 .landing .container .frappe img {
   z-index: 2;
   width: 100%;
-  max-width: 150px;
-  -webkit-transform: rotate(20deg) translate(10px, 20px);
-          transform: rotate(20deg) translate(10px, 20px);
+  max-width: 110px;
+  -webkit-transform: rotate(20deg) translate(5px, 5px);
+          transform: rotate(20deg) translate(5px, 5px);
   -webkit-filter: drop-shadow(15px 15px 10px rgba(0, 0, 0, 0.25));
           filter: drop-shadow(15px 15px 10px rgba(0, 0, 0, 0.25));
 }
