--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -70,9 +70,8 @@ nav {
         }
 
         #hamburger {
-            display: flex;
-            flex-direction: column;
-            gap: 5px;
+            display: grid;
+            grid-gap: .3rem;
             width: 2.5rem;
             cursor: pointer;
             z-index: 10;
@@ -90,7 +89,7 @@ nav {
 
                 &:nth-child(2) {
                     width: 50%;
-                    align-self: flex-end;
+                    justify-self: end;
                 }
             }
 
@@ -270,13 +269,17 @@ nav {
 }
 
 .social {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+    display: grid;
+    grid-gap: .5rem;
 
     position: fixed;
-    top: 45%;
+    top: 50%;
     right: 10px;
+
+    @include laptop {
+        top: 45%;
+        grid-gap: 1rem;
+    }
 
     a {
         font-size: 16px;
@@ -321,7 +324,6 @@ nav {
         align-items: center;
         flex-direction: column;
         text-align: center;
-        gap: 3rem;
 
 
         @include laptop {
@@ -370,8 +372,8 @@ nav {
             img {
                 z-index: 2;
                 width:100%;
-                max-width: 150px;
-                transform: rotate(20deg) translate(10px, 20px);
+                max-width: 110px;
+                transform: rotate(20deg) translate(5px, 5px);
                 filter: drop-shadow(15px 15px 10px rgba(0,0,0,.25));
             }
 
